src/components/Navbar/Navbar.module.scss
@import '../../assets/styles/main';

.navbar {
    display: flex;
    position: fixed;
    top: 0;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 12px;
    background-image: url('../../assets/img/navbar_banner.png');
    background-repeat: no-repeat;
    background-size: cover;
    z-index: 1000;
    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);

    @media screen and (max-width: 768px) {
        height: 8vh;
    }

    .navbar__logo {
        display: flex;
        flex-direction: row;
        align-items: baseline;

        .logo__container {
            width: 150px;

            @media screen and (max-width: 768px) {
                width: 100px;
            }
            
            img {
                width: 100%;
            }
        }

        p {
            font-family: $headerFont;
            color: $white;
            font-size: 2.4rem;
            font-weight: 400;
            margin-left: 12px;
            text-transform: initial;

            @media screen and (max-width: 768px) {
                font-size: 1.8rem;
            }
        }
    }

    .navbar__menu {
        display: flex;
        flex-direction: row;
        align-items: center;

        @media screen and (max-width: 768px) {
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: center;
            position: absolute;
            top: 8vh;
            left: 0;
            right: 0;
            width: 100%;
            background-image: url('../../assets/img/navbar_banner.png');
            padding: 20px 0;
            transition: opacity 0.3s ease-in-out;
            opacity: 0;
        }

        .navbar__linkWrapper {
            margin-right: 20px;
            text-decoration: none;
            color: $white;

            @media screen and (max-width: 768px) {
                margin: 0;
                padding: 5px 0;
            }

            .navbar__menuItem {
                color: $white;
                font-family: $semiBoldFont;
                font-size: 1.2rem;
                transition: 0.3s ease-in;
                border-bottom: 2px solid transparent;

                &:hover {
                    border-bottom: 2px solid $white;
                }
            }
        }

        .navbar__btn {
            font-family: $semiBoldFont;
            text-transform: uppercase;
            background-color: $pink;
            color: $white;
            padding: 7px;
            font-size: 1.2rem;

            &:hover {
                background-color: #D22377;
            }
        }
    }

    .menuOpen {
        opacity: 1;
    }

    .navbar__hamburgerMenu {
        display: none;

        @media screen and (max-width: 768px) {
            display: block;
            cursor: pointer;
        }

        .lines {
            width: 30px;
            height: 3px;
            background-color: $white;
            margin: 5px 0;
        }

        .line__1 {
            transform: rotate(-45deg) translate(-6px, 6px);
            transition: transform 0.3s ease-in-out;
        }

        .line__2 {
            opacity: 0;
            transition: transform 0.3s ease-in-out;
        }

        .line__3 {
            transform: rotate(45deg) translate(-5px, -6px);
            transition: transform 0.3s ease-in-out;
        }
    }
}

